# Techrater

./: .gitignore  CMakeLists.txt  main.cc  vcpkg.json  verifyEmail.html
controllers/: Admin.cc  Admin.h  Auth.cc  Auth.h  BaseWebsocket.h  Notice.cc  Notice.h  Player.cc  Player.h  WebSocket.cc  WebSocket.h  Websocket.cc  Websocket.h
docs/: api.md  http.md  i18n.json  websocket.md
filters/: AdminShutdownAfter.cc  AdminShutdownAfter.h  AuthDeactivate.cc  AuthDeactivate.h  AuthDeactivateEmail.cc  AuthDeactivateEmail.h  AuthLoginEmail.cc  AuthLoginEmail.h  AuthMigrateEmail.cc  AuthMigrateEmail.h  AuthOauth.cc  AuthOauth.h  AuthResetEmail.cc  AuthResetEmail.h  AuthSeedEmail.cc  AuthSeedEmail.h  AuthVerifyEmail.cc  AuthVerifyEmail.h  CheckAccessToken.cc  CheckAccessToken.h  CheckPermission.cc  CheckPermission.h  CheckPlayerId.cc  CheckPlayerId.h  CheckRefreshToken.cc  CheckRefreshToken.h  GetAccessToken.cc  GetAccessToken.h  IdentifyUser.cc  IdentifyUser.h  LimitEmail.cc  LimitEmail.h  LimitIp.cc  LimitIp.h  LimitLoginEmail.cc  LimitLoginEmail.h  LimitVerifyEmail.cc  LimitVerifyEmail.h  NoticeCreate.cc  NoticeCreate.h  (+10 more)
helpers/: BasicJson.cc  BasicJson.h  DataJson.cc  DataJson.h  I18nHelper.h  MessageJson.cc  MessageJson.h  RedisHelper.cc  RedisHelper.h  RequestJson.cc  RequestJson.h  ResponseJson.cc  ResponseJson.h
models/: Data.cc  Data.h  Notice.cc  Notice.h  Player.cc  Player.h
plugins/: Configurator.cpp  Configurator.h  ConnectionManager.cc  ConnectionManager.h  EmailManager.cc  EmailManager.h  HandlerManager.cc  HandlerManager.h  LeagueManager.h  NoticeManager.cc  NoticeManager.h  PlayerManager.cc  PlayerManager.h  RoomManager.cc  RoomManager.h  SMTPMail.cc  SMTPMail.h
strategies/: GlobalOnlineCount.cc  GlobalOnlineCount.h  PlayerConfig.cc  PlayerConfig.h  PlayerFinish.cc  PlayerFinish.h  PlayerGroup.cc  PlayerGroup.h  PlayerPing.cc  PlayerPing.h  PlayerReady.cc  PlayerReady.h  PlayerRole.cc  PlayerRole.h  PlayerState.cc  PlayerState.h  PlayerStream.cc  PlayerStream.h  PlayerType.cc  PlayerType.h  RoomChat.cc  RoomChat.h  RoomCreate.cc  RoomCreate.h  RoomDataGet.cc  RoomDataGet.h  RoomDataUpdate.cc  RoomDataUpdate.h  RoomInfoGet.cc  RoomInfoGet.h  RoomInfoUpdate.cc  RoomInfoUpdate.h  RoomJoin.cc  RoomJoin.h  RoomKick.cc  RoomKick.h  RoomLeave.cc  RoomLeave.h  RoomList.cc  RoomList.h  (+4 more)
structures/: Room.cc  (+16 more)
(+17 files in other folders)
